Separated the modules in different js files

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 <body>
 	<canvas class="myCanvas" width="480" height="320"></canvas>
 	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="drawball.js"></script>
+	<script type="text/javascript" src="drawbricks.js"></script>
+	<script type="text/javascript" src="drawpaddle.js"></script>
+	<script type="text/javascript" src="drawlives.js"></script>
+	<script type="text/javascript" src="keypress.js"></script>
+	<script type="text/javascript" src="detectcollision.js"></script>
+	<script type="text/javascript" src="drawscore.js"></script>
 </body>
 </html>
