Modified the components

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 	<script type="text/javascript" src="keypress.js"></script>
 	<script type="text/javascript" src="detectcollision.js"></script>
 	<script type="text/javascript" src="drawscore.js"></script>
+	<script type="text/javascript" src="store.js"></script>
 </body>
 </html>
