--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
 <body>
 	<canvas class="myCanvas" width="480" height="320"></canvas>
 	<script type="text/javascript" src="main.js"></script>
-	<script type="text/javascript" src="drawball.js"></script>
-	<script type="text/javascript" src="drawbricks.js"></script>
-	<script type="text/javascript" src="drawpaddle.js"></script>
-	<script type="text/javascript" src="drawlives.js"></script>
-	<script type="text/javascript" src="keypress.js"></script>
-	<script type="text/javascript" src="detectcollision.js"></script>
-	<script type="text/javascript" src="drawscore.js"></script>
-	<script type="text/javascript" src="store.js"></script>
+	<script type="text/javascript" src="canvaselements.js"></script>
+	<script type="text/javascript" src="canvasbricks.js"></script>
 </body>
 </html>
